samples/_failures_safe/1761289299_d01893_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66357d66.c: In function ‘main’:
./samples/SAFE/__tmp_66357d66.c:156:9: error: expected declaration or statement at end of input
  156 |         printf("Select operation: ");
      |         ^~~~~~
./samples/SAFE/__tmp_66357d66.c:156:9: error: expected declaration or statement at end of input
